# raw2l1

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedoc.yaml  CHANGELOG  CHANGELOG.md  README.md  environment.yml  pyproject.toml  pytest.ini  raw2l1.sublime-project  requirements.txt  ruff.toml  tags
.github/workflows/: ci.yaml  ruff.yaml
conf/: conf_campbell_cs135_eprofile.ini  conf_leosphere_wls70_10min.ini  conf_leosphere_wls70_10s.ini  conf_leosphere_wls7_10min.ini  conf_leosphere_wls7_1s.ini  conf_lufft_chm15k-ukmo_eprofile.ini  conf_rpg_hatpro_bl00-l1-tb_toprof_netcdf4.ini  conf_rpg_hatpro_bl00-l2-ta_toprof_netcdf4.ini  conf_rpg_hatpro_l1-tb_toprof_netcdf4.ini  conf_rpg_hatpro_l2-clwvi_toprof_netcdf4.ini  conf_rpg_hatpro_l2-hua_toprof_netcdf4.ini  conf_rpg_hatpro_l2-prw_toprof_netcdf4.ini  conf_rpg_hatpro_l2-ta_toprof_netcdf4.ini  conf_sigmaspace_minimpl_eprofile.ini  conf_sigmaspace_mpl_eprofile.ini  conf_vaisala_cl31-swiss-airports_eprofile.ini  conf_vaisala_cl31_eprofile.ini  conf_vaisala_cl51_eprofile.ini  conf_vaisala_cl61_eprofile.ini  conf_vaisala_ct25k.ini
docs/source/: conf.py  index.md
docs/source/get-started/: configure.md  index.md  install.md
docs/source/readers/: index.md
environments/: environment-dev.yml  environment.yml
raw2l1/: .project  conf.ini  config.ini  lidar2netcdf.py  raw2l1.py  read_overlap.py  readyourdata.py  run_unittests.sh
raw2l1/conf/: conf_campbell_cs135_LMU.ini  conf_campbell_cs135_eprofile.ini  conf_campbell_cs135_toprof.ini  conf_campbell_cs135_toprof_netcdf4.ini  conf_jenoptik_chm15k.ini  conf_leosphere_wls7.ini  conf_leosphere_wls70.ini  conf_leosphere_wls70_10min.ini  conf_leosphere_wls70_10s.ini  conf_leosphere_wls7_10min.ini  conf_leosphere_wls7_1s.ini  conf_lufft_chm15k-nimbus-uk-metoffice_eprofile.ini  conf_lufft_chm15k-nimbus_eprofile.ini  conf_lufft_chm15k-nimbus_toprof.ini  conf_lufft_chm15k-nimbus_toprof_netcdf4.ini  conf_lufft_chm15k-ukmo_eprofile.ini  conf_lufft_chm15k_LMU.ini  conf_lufft_chm15k_eprofile.ini  conf_lufft_chm8k_LMU.ini  conf_rpg_hatpro_bl00-l1-tb_toprof_netcdf4.ini  conf_rpg_hatpro_bl00-l2-ta_toprof_netcdf4.ini  conf_rpg_hatpro_bl00-l2_toprof_netcdf4.ini  conf_rpg_hatpro_l1-tb_toprof_netcdf4.ini  conf_rpg_hatpro_l2-clwvi_toprof_netcdf4.ini  conf_rpg_hatpro_l2-hua_toprof_netcdf4.ini  conf_rpg_hatpro_l2-prw_toprof_netcdf4.ini  conf_rpg_hatpro_l2-ta_toprof_netcdf4.ini  conf_sigmaspace_minimpl_basic.ini  conf_sigmaspace_minimpl_eprofile.ini  conf_sigmaspace_mpl_eprofile.ini  conf_vaisala_cl31-swiss-airport_eprofile.ini  conf_vaisala_cl31-swiss-airport_toprof_netcdf4.ini  conf_vaisala_cl31-swiss-airports_eprofile.ini  conf_vaisala_cl31.ini  conf_vaisala_cl31_LMU.ini  conf_vaisala_cl31_eprofile.ini  conf_vaisala_cl31_toprof.ini  conf_vaisala_cl31_toprof_netcdf4.ini  conf_vaisala_cl51.ini  conf_vaisala_cl51_LMU.ini  (+6 more)
raw2l1/doc/: Makefile  make.bat
raw2l1/doc/source/: conf.py  configuration.rst  index.rst  prerequisites.rst  readers.rst  running.rst
raw2l1/reader/: campbellscientific_cs135.py  campbellscientific_cs135_LMU.py  jenoptik_chm15k.py  leosphere_wls7.py  leosphere_wls70.py  leosphere_wls70_10min.py  leosphere_wls70_10s.py  leosphere_wls7_10min.py  leosphere_wls7_1s.py  libhatpro.py  lufft_chm15k_nimbus-uk-metoffice.py  lufft_chm15k_nimbus.py  lufft_chm15k_nimbus_LMU.py  lufft_chm8k_LMU.py  rpg_hatpro_absolute_humidity.py  rpg_hatpro_air_temp.py  rpg_hatpro_air_temp_bl.py  rpg_hatpro_brightness_temperature.py  rpg_hatpro_brightness_temperature_bl.py  rpg_hatpro_clwvi.py  rpg_hatpro_prw.py  sigmaspace_minimpl.py  sirta_ipral.py  test_reader.py  vaisala_cl.py  vaisala_cl31.py  vaisala_cl31_LMU.py  vaisala_cl51.py  vaisala_cl51_LMU.py  vaisala_cl61.py  vaisala_cl61_LMU.py  vaisala_cl_swiss_airport.py  vaisala_ct25k.py
raw2l1/reader/lib/: libvaisala.py
raw2l1/test/: .gitignore  test_arg_parser.py  test_chm15k_nimbus-uk-metoffice.py  test_chm15k_nimbus.py  test_cs135.py  test_ipral.py  test_leosphere_wls7.py  test_leosphere_wls70.py  test_lidar_reader.py  test_logs.py  test_netcdf4.py  test_raw2l1.py  test_rpg_hatpro.py  test_sigmaspace_minimpl.py  test_timeliness.py  test_toprof_format.py  test_vaisala.py  test_vaisala_cl61.py  test_vaisala_ct25k.py  test_vaisala_eprofile.py  test_vaisala_sirta.py
raw2l1/test/conf/: conf_campbell_cs135-cl_eprofile.ini  conf_lufft_chm15k-ukmo_eprofile.ini  conf_lufft_chm15k_eprofile.ini  conf_sigmaspace_minimpl_eprofile.ini  conf_vaisala_cl31-swiss-airports_eprofile.ini  conf_vaisala_cl31_eprofile.ini  readerconf_no_missing.ini  readerconf_no_missing_float.ini
raw2l1/test/input/: conf.ini
raw2l1/tools/: arg_parser.py  check_conf.py  common.py  conf.py  create_netcdf.py  errors.py  lidar_reader.py  log.py  read_overlap.py  utils.py
requirements/: dev.txt  doc.txt  requirements-dev.txt  requirements.txt
scripts/: generate_pip_deps_from_conda.py
src/raw2l1/: raw2l1.py  version.py
src/raw2l1/reader/: .gitignore  campbellscientific_cs135.py  leosphere_wls70_10min.py  leosphere_wls70_10s.py  leosphere_wls7_10min.py  leosphere_wls7_1s.py  libhatpro.py  lufft_chm15k_nimbus-uk-metoffice.py  lufft_chm15k_nimbus.py  rpg_hatpro_absolute_humidity.py  rpg_hatpro_air_temp.py  rpg_hatpro_air_temp_bl.py  rpg_hatpro_brightness_temperature.py  rpg_hatpro_brightness_temperature_bl.py  rpg_hatpro_clwvi.py  rpg_hatpro_prw.py  sigmaspace_minimpl.py  sirta_ipral.py  test_reader.py  vaisala_cl.py  vaisala_cl61.py  vaisala_cl_swiss_airport.py  vaisala_ct25k.py
src/raw2l1/tools/: arg_parser.py  check_conf.py  conf.py  create_netcdf.py  lidar_reader.py  log.py  (+2 more)
tests/: .gitignore  conftest.py  test_arg_parser.py  test_chm15k_nimbus.py  test_ipral.py  test_leosphere_wls7.py  test_leosphere_wls70.py  test_lidar_reader.py  test_logs.py  test_rpg_hatpro.py  test_timeliness.py  test_vaisala_ct25k.py  test_vaisala_eprofile.py
tests/conf/: conf_campbell_cs135_eprofile.ini  readerconf_missing_float_nan.ini
tests/lufft_chm15k/: conftest.py  test_chm15k_nimbus-uk-metoffice.py  test_chm15k_nimbus.py
tests/vaisala_cl/: conftest.py  test_vaisala.py
(+122 files in other folders)
